--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/App.css" />
-    <title>Vite + React + TS</title>
+    <title>Dialogue Tool</title>
   </head>
   <body class="bg-gray-700">
     <div id="root"></div>
